--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="default_name">Name</string>
+    <string name="default_initVal">0</string>
+    <string name="default_comment">Comment</string>
 </resources>
