--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="default_initVal">0</string>
     <string name="default_comment">Comment</string>
     <string name="confirm_changes">Save Changes</string>
+    <string name="title_activity_create">New Counter</string>
 </resources>
